@@ -1,0 +1,4 @@
+zone "\0example" {
+        type mirror;
+        file "example.db";
+};
